--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,48 +1,48 @@
-.logo{
+ /* Add a black background color to the top navigation */
+ .topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add an active class to highlight the current page */
+  .active {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  /* Hide the link that should open and close the topnav on small screens */
+  .topnav .icon {
+    display: none;
+  } 
+
+  .logo{
     img{
         height: 15vh;
         width: 20vw;
-        align-content: center;
-    }
-    height: 100%;
-    width: 60%;
-    font-weight: bolder;
-    font-size: 10em;
-
+		align-content: center;
+		}
+	display: flex;
+	justify-content: center;
+  }
+  
+  .login{
     display: flex;
-    justify-content: center;
-    align-items: center;
-    order: 2;
-}
-
-.login{
-    display: flex;
-    width:20%;
-    justify-content: center;
-    align-items: center;
-    order: 1;
-
-}
-
-.sidebar-button{
-    order: 3;
-    justify-self: flex-end;
-    display: flex;
-    width: 20%;
-}
-
-.example-container{
-    order: 4;
-    height: 100vh;
-
-    .example-sidenav{
-        width: 250px;
-    }
-}
-
-.navbar{
-    display: flex;
-    flex-direction: row-reverse;
-    width: 100vw;
-    height: 100px;
-}
+    justify-content: flex-end;
+  }
