--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,8 @@
 <div class="topnav" id="myTopnav">
-  <a routerLink= "/" class="active">Home</a>
+  <a routerLink= "home" class="active">Home</a>
   <a routerLink="">Articles</a>
-  <!-- <a href="#contact">Contact</a> -->
+  <a routerLink="">Contact</a>
   <div class="login"><a routerLink= "/login">Login/Register</a></div>
 </div>
 
-<div class="logo">
-	<img src="assets/images/Smokoff_logo.png" alt="">
-</div>
+<div class="logo"><img src="assets/images/Smokoff_logo.png" alt=""></div>
