--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,21 +1,40 @@
 <div class="regis_box">
-	<p class="regis_statement">Register</p>
+	<!-- <p class="regis_statement">Register</p> -->
 
 	<form>
-		<label>Username</label>
-		<input type="text" name="Username" class="form_regis" placeholder="...">
-
-		<label>E-mail</label>
-    <input type="text" name="E-mail" class="form_regis" placeholder="...">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600' rel='stylesheet' type='text/css'>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet">
     
-    <label>Password</label>
-    <input type="text" name="Password" class="form_regis" placeholder="...">
+    <div class="testbox">
     
-    <label>Confirm Password</label>
-    <input type="text" name="Confirm_Password" class="form_regis" placeholder="...">
-
-		<input type="submit" class="regis_button" value="Register">
+      <form action="/">
+          <hr>
+        <div class="accounttype">
+          <input type="radio" value="None" id="radioOne" name="account" checked/>
+          <label for="radioOne" class="radio" chec> Smoker </label>
+          <input type="radio" value="None" id="radioTwo" name="account" />
+          <label for="radioTwo" class="radio"> Non-Smoker </label>
+        </div>
+      <hr>
+      <label id="icon" for="name"><i class="icon-envelope "></i></label>
+      <input type="text" name="name" id="name" placeholder="Email" required/>
+      <label id="icon" for="name"><i class="icon-user"></i></label>
+      <input type="text" name="name" id="name" placeholder="Name" required/>
+      <label id="icon" for="name"><i class="icon-shield"></i></label>
+      <input type="password" name="name" id="name" placeholder="Password" required/>
+      <div class="gender">
+        <input type="radio" value="None" id="male" name="gender" checked/>
+        <label for="male" class="radio" chec>Male</label>
+        <input type="radio" value="None" id="female" name="gender" />
+        <label for="female" class="radio">Female</label>
+       </div> 
+       <p>By clicking Register, you agree on our <a href="#">terms and condition</a>.</p>
+       <a href="#" class="button">Register</a>
+      </form>
+    </div>
+		<!-- <input type="submit" class="regis_button" value="Register"> -->
   </form>
+  <!-- <a routerLink="/login"> <p>Have an account? Login</p></a> -->
 
 </div>
 
