changed navbar UI, add smoker-ui, planner, profile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<app-totd-bar></app-totd-bar>
 <router-outlet></router-outlet>
 <app-admin></app-admin>
 <app-footer></app-footer>
