--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,13 @@
 <div class="login_box">
 	<p class="login_statement">LOGIN</p>
 
-	<form>
-		<label>Username</label>
-		<input type="text" name="username/E-mail" class="form_login" placeholder="...">
+	<form method="POST">
+		<input type="text" name="username" class="form_login" placeholder="Username">
 
-		<label>Password</label>
-		<input type="text" name="password" class="form_login" placeholder="...">
+		<input type="text" name="password" class="form_login" placeholder="Password">
 
 		<input type="submit" class="login_button" value="LOGIN">
 
 	</form>
 	<a routerLink="/register"> <p>Don't have an account? Register</p></a>
-
 </div>
