--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,16 @@
-<div class="topnav" id="myTopnav">
-  <a routerLink= "home" class="active">Home</a>
-  <a routerLink="">Articles</a>
-  <a routerLink="">Contact</a>
-  <div class="login"><a routerLink= "/login">Login/Register</a></div>
-</div>
-
-<div class="logo"><img src="assets/images/Smokoff_logo.png" alt=""></div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a routerLink="/" class="navbar-brand"><img src="assets/images/Smokoff_logo.png" alt="Smokoff" width="125px"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"><a class="nav-link" routerLink="">Articles</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="#contact">Contact</a></li>
+    </ul>
+    <ul class="navbar-nav">
+      <li class="nav-item mr-auto"><a class="nav-link" routerLink="/login">Login</a></li>
+      <li class="nav-item"><a class="btn btn-danger d-block" routerLink="/register">Register</a></li>
+    </ul>
+  </div>
+</nav>
