--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,8 +9,8 @@
       <li class="nav-item"><a class="nav-link" routerLink="#contact">Contact</a></li>
     </ul>
     <ul class="navbar-nav">
-      <li class="nav-item mr-auto"><a class="nav-link" routerLink="/login">Login</a></li>
-      <li class="nav-item"><a class="btn btn-danger d-block" routerLink="/register">Register</a></li>
+      <li class="nav-item mr-auto"><a class="nav-link" routerLink="auth/login">Login</a></li>
+      <li class="nav-item"><a class="btn btn-danger d-block" routerLink="auth/register">Register</a></li>
     </ul>
   </div>
 </nav>
