--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,3 +1,10 @@
-<p>
-  admin works!
-</p>
+<div class="admin_box">
+	<h2 class="admin_statement">ADMIN</h2>
+	<form>
+        <input type="text" name="username" class="form_login" placeholder="Title">
+
+        <textarea rows="4" cols="56"></textarea>
+
+		<button type="submit" class="submit_button">SUBMIT</button>
+    </form>
+</div>
