--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,9 +1,9 @@
-.bg-img{
-	font-family: sans-serif;
-	background-image: url("../../../assets/images/auth_bg.jpeg")!important;
-	background-position: center;
-    background-repeat: no-repeat; 
-}
+// .bg-img{
+// 	font-family: sans-serif;
+// 	background-image: url("../../../assets/images/auth_bg.jpeg")!important;
+// 	background-position: center;
+//     background-repeat: no-repeat; 
+// }
 
 
 h1{
