--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,6 +10,7 @@
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item mr-auto"><a class="nav-link" routerLink="auth/login">Login</a></li>
+      <li class="nav-item mr-auto"><a class="nav-link" routerLink="auth/logout">Logout</a></li>
       <li class="nav-item"><a class="btn btn-danger d-block" routerLink="auth/register">Register</a></li>
     </ul>
   </div>
