--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,4 +1,14 @@
-.title{
-    text-align:center;
+.bgimg {
+    background-position: center;
+    background-size: cover;
+}
+
+.about-title{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 48px;
     color: red;
+}
+
+.about{
+    text-align: center;
 }
