--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,5 +1,4 @@
 <div class="regis_box">
-	<!-- <p class="regis_statement">Register</p> -->
 
 	<form>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600' rel='stylesheet' type='text/css'>
@@ -28,7 +27,7 @@
         <input type="radio" value="None" id="female" name="gender" />
         <label for="female" class="radio">Female</label>
        </div> 
-       <p>By clicking Register, you agree on our <a href="#">terms and condition</a>.</p>
+       <a routerLink="../login"> <p>Have an account? Login</p></a>
        <a href="#" class="button">Register</a>
       </form>
     </div>
