--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,8 +1,9 @@
  .footer {
-    position: absolute;
+    position: relative;
     right: 0;
-    bottom: 0;
     left: 0;
+    bottom: 0;
+    width: 100%;
     padding: 1rem;
     background-color:#333;
     text-align: center;
