--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -1,62 +1,3 @@
-// body{
-// 	font-family: sans-serif;
-// 	background: #d5f0f3;
-// }
-
-// .gender {
-// 	margin-bottom: 30px;
-// }
-
-// h1{
-// 	text-align: center;
-// 	font-weight: 300;
-// }
-
-// .regis_statement{
-// 	text-align: center;
-// 	text-transform: uppercase;
-// }
-
-// .regis_box{
-// 	width: 350px;
-// 	background: whitesmoke;
-// 	margin: 80px auto;
-// 	padding: 30px 20px;
-// }
-
-// label{
-// 	font-size: 11pt;
-// }
-
-// .form_regis{
-// 	box-sizing : border-box;
-// 	width: 100%;
-// 	padding: 10px;
-// 	font-size: 11pt;
-// 	margin-bottom: 20px;
-// }
-
-// .regis_button{
-// 	background: red;
-// 	color: white;
-// 	font-size: 11pt;
-// 	width: 100%;
-// 	border: none;
-// 	border-radius: 3px;
-// 	padding: 10px 20px;
-// }
-
-// .link{
-// 	color: #232323;
-// 	text-decoration: none;
-// 	font-size: 10pt;
-// }
-
-// body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, 
-// pre, form, fieldset, input, textarea, p, blockquote, th, td { 
-//   padding:0;
-//   margin:0;}
-
 fieldset, img {border:0}
 
 ol, ul, li {list-style:none}
@@ -123,7 +64,7 @@ label.radio {
 }
 
 label.radio:before {
-  background: #3a57af;
+  background: red;
   content:'';
   position: absolute;
   top:2px;
@@ -185,7 +126,7 @@ input[type=password]{
 #icon {
   display: inline-block;
   width: 30px;
-  background-color: #3a57af;
+  background-color: red;
   padding: 8px 7.5px 8px 7.5px;
   margin-left: 15px;
   -webkit-border-radius: 4px 0px 0px 4px; 
@@ -212,19 +153,18 @@ a.button {
   font-size: 14px;
   font-weight: 600;
   color: white;
-  padding: 6px 25px 0px 20px;
+  // padding: 6px 25px 0px 20px;
   margin: 10px 8px 20px 0px;
   display: inline-block;
-//   float: right;
   text-decoration: none;
-  width: 50px; height: 27px; 
+  width: 70px; height: 27px; 
   -webkit-border-radius: 5px; 
   -moz-border-radius: 5px; 
   border-radius: 5px; 
-  background-color: #3a57af; 
-  -webkit-box-shadow: 0 3px rgba(58,87,175,.75); 
-  -moz-box-shadow: 0 3px rgba(58,87,175,.75); 
-  box-shadow: 0 3px rgba(58,87,175,.75);
+  background-color: red; 
+  -webkit-box-shadow: red; 
+  -moz-box-shadow: red; 
+  box-shadow: red;
   transition: all 0.1s linear 0s; 
   top: 0px;
   position: relative;
@@ -232,7 +172,7 @@ a.button {
 
 a.button:hover {
   top: 3px;
-  background-color:#2e458b;
+  background-color:red;
   -webkit-box-shadow: none; 
   -moz-box-shadow: none; 
   box-shadow: none;
