add 404, add unauthorized only permission for pages, edit some JWT

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,5 @@
 <div class="footer">
-    <div class= "copyright">  © 2019 smokoff </div>
+    Hotline berhenti merokok 0800-177-6565
+    <div class= "copyright">© 2019 smokoff </div>
 </div>
 
