--- a/src/app/components/smoker-ui/smoker-ui.component.html
+++ b/src/app/components/smoker-ui/smoker-ui.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<h2 *ngFor="let user of users">Welcome, {{ user.firstName }}!</h2>
+	<h2>Welcome, {{ user.firstName }}!</h2>
 	<p>Have a nice day!</p>
 	<div class="row">
 		<div class="col-lg mt-3">
