--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,10 @@
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item mr-auto"><a class="nav-link" routerLink="auth/login">Login</a></li>
-      <li class="nav-item mr-auto"><a class="nav-link" routerLink="auth/logout">Logout</a></li>
+      <div class="logged-in ">
+          <li class="nav-item mr-auto"><a class="btn btn-danger d-block" routerLink="profile">a</a></li>
+          <li class="nav-item"><a class="btn btn-secondary d-block" routerLink="auth/logout">Logout</a></li>
+      </div>
       <li class="nav-item"><a class="btn btn-danger d-block" routerLink="auth/register">Register</a></li>
     </ul>
   </div>
