remove curly brace

--- a/src/app/components/smoker-ui/smoker-ui.component.html
+++ b/src/app/components/smoker-ui/smoker-ui.component.html
@@ -1,12 +1,14 @@
 <div class="container">
-	<h2>Welcome, {{ user.firstName }}!</h2>
+	<!-- <h2>Welcome, {{ user.firstName }}!</h2> -->
+	<h2>Welcome, David!</h2>
+
 	<p>Have a nice day!</p>
 	<div class="row">
 		<div class="col-lg mt-3">
 			<div class="card card-body h-100">
 				<h2 class="card-title">Stats</h2>
-				<p class="card-text">You haven't smoked for {{smoked}}</p>
-				<p class="card-text">You have saved Rp. {{saved}}</p>
+				<p class="card-text">You haven't smoked for </p>
+				<p class="card-text">You have saved Rp. </p>
 			</div>
 		</div>
 		<div class="col-lg mt-3">
@@ -23,7 +25,7 @@
 			<div class="card card-body h-100">
 				<h2 class="card-title">Profile</h2>
 				<img class="mx-auto"src="../../assets/images/person_placeholder.jpg" width="100px"/>
-				<p class="card-text">Level 13{{level}}</p>
+				<p class="card-text">Level 13</p>
 				<div class="progress mb-3">
 					<div class="progress-bar bg-danger" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 				</div> 
