--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
 
 
 <div class="bgimg">
-  <img src="src/assets/images/50-reasons-to-stop-smoking-today-7x4(1).jpg" alt="">
+  <img class="mx-auto" src="../../../assets/images/50-reasons-to-stop-smoking-today-7x4 (1).jpg" alt="">
 </div>              
 
   <!-- About Section -->
