--- a/src/app/components/smoker-ui/smoker-ui.component.html
+++ b/src/app/components/smoker-ui/smoker-ui.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-	<h2 *ngFor="let product of products">Welcome, {{ user.first_name }}!</h2>
-	<!-- <h2>Welcome, David!</h2> -->
+	<!-- <h2 *ngFor="let product of products">Welcome, {{ user.first_name }}!</h2> -->
+	<h2>Welcome, David!</h2>
 
 	<p>Have a nice day!</p>
 	<div class="row">
