some changes and API updated (could get info now)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar>
-<app-totd-bar></app-totd-bar>
+<app-tips-bar></app-tips-bar>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
