--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,4 @@
-<div class="footer">
+<footer>
     Hotline berhenti merokok 0800-177-6565
     <div class= "copyright">© 2019 smokoff </div>
-</div>
-
+</footer>
