--- a/src/app/components/pagenotfound/pagenotfound.component.html
+++ b/src/app/components/pagenotfound/pagenotfound.component.html
@@ -1,2 +1,5 @@
-<h1>404 Not Found</h1>
-<p>Page you've tried to access is missing, maybe deleted, moved or wrong path.</p>
+<div class="container">
+    <h1>4 0 4</h1>
+    <h5>Page Not Found</h5>
+    <p>Page you've tried to access is missing, maybe deleted, moved or wrong path.</p>
+</div>
