--- a/src/app/components/smoker-ui/smoker-ui.component.html
+++ b/src/app/components/smoker-ui/smoker-ui.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-	<!-- <h2 *ngFor="let product of products">Welcome, {{ user.first_name }}!</h2> -->
-	<h2>Welcome, David!</h2>
-
+	<h2 class="mt-3">Welcome, {{ user.first_name }}!</h2>
 	<p>Have a nice day!</p>
+	
 	<div class="row">
 		<div class="col-lg mt-3">
 			<div class="card card-body h-100">
@@ -25,9 +24,9 @@
 			<div class="card card-body h-100">
 				<h2 class="card-title">Profile</h2>
 				<img class="mx-auto"src="../../assets/images/person_placeholder.jpg" width="100px"/>
-				<p class="card-text">Level 13</p>
+				<p class="card-text">Level {{user.level}}</p>
 				<div class="progress mb-3">
-					<div class="progress-bar bg-danger" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+					<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{user.exp}}</div>
 				</div> 
 				<div class="badges my-3"></div>
 				<a routerLink="../profile" class="btn btn-danger"><i class="fas fa-pen"></i> Edit Profile</a>
