--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,52 +1,28 @@
-// .bg-img{
-// 	font-family: sans-serif;
-// 	background-image: url("../../../assets/images/auth_bg.jpeg")!important;
-// 	background-position: center;
-//     background-repeat: no-repeat; 
-// }
-
-
 h1{
 	text-align: center;
 	font-weight: 300;
 }
 
+#container{
+	height: 100% ;
+	background: url('../../../assets/images/auth_bg.jpeg') no-repeat center fixed;
+	background-size: cover;
+	padding: 150px 0;
+}
+
 .login_statement{
 	text-align: center;
-	text-transform: uppercase;
 }
 
 .login_box{
-	width: 350px;
+	width: 400px;
 	background: whitesmoke;
-	margin: 80px auto;
-	padding: 30px 20px;
+	margin: auto;
+	padding: 50px 20px;
+	box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.25);
+	border-radius: 5px;
 }
 
 label{
 	font-size: 11pt;
-}
-
-.form_login{
-	box-sizing : border-box;
-	width: 100%;
-	padding: 10px;
-	font-size: 11pt;
-	margin-bottom: 20px;
-}
-
-.login_button{
-	background: red;
-	color: white;
-	font-size: 11pt;
-	width: 100%;
-	border: none;
-	border-radius: 3px;
-	padding: 10px 20px;
-}
-
-.link{
-	color: #232323;
-	text-decoration: none;
-	font-size: 10pt;
 }
