--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -4,6 +4,18 @@ ol, ul, li {list-style:none}
 
 :focus {outline:none}
 
+#container{
+	height: 100% ;
+	background: url('../../../assets/images/auth_bg.jpeg') no-repeat center fixed;
+	background-size: cover;
+	padding: 150px 0;
+}
+
+.login_statement{
+  margin:20px 0;
+	text-align: center;
+}
+
 body,
 input,
 textarea,
@@ -35,7 +47,7 @@ html{
 .testbox {
   margin: 20px auto;
   width: 343px; 
-  height: 464px; 
+  height: 504px; 
   -webkit-border-radius: 8px/7px; 
   -moz-border-radius: 8px/7px; 
   border-radius: 8px/7px; 
@@ -153,7 +165,7 @@ a.button {
   font-size: 14px;
   font-weight: 600;
   color: white;
-  // padding: 6px 25px 0px 20px;
+  padding: 3px 15px 0px 8px;
   margin: 10px 8px 20px 0px;
   display: inline-block;
   text-decoration: none;
