updated navbar and some planner and also etc

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
-    Hotline berhenti merokok 0800-177-6565
-    <div class= "copyright">© 2019 smokoff </div>
+<footer class="mt-auto">
+    <p>Hotline Berhenti Merokok<br/><i class="fas fa-phone"></i> 0800-177-6565</p>
+    <p class= "copyright">© 2019 smokoff</p>
 </footer>
