--- a/src/app/components/planner/planner.component.html
+++ b/src/app/components/planner/planner.component.html
@@ -7,7 +7,7 @@
     <app-planner-input></app-planner-input>
   </div>
   <!-- Month Calendar -->
-  <div class="monthCalendar mt-3">
-    Calendar
+  <div class="plans my-3">
+    Plans
   </div>
 </div>
