--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,18 +1,17 @@
  @import "../../../assets/variables.scss";
  
  footer {
-    position: relative;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+    // position: relative;
+    // bottom: 0;
+    // width: 100%;
+    // height: 100%;
     padding: 1rem;
     color: $white;
     background-color: $black;
     text-align: center;
   }
 
-  .copyright{
-    display: flex;
-    justify-content: flex-end;
-  }
+  // .copyright{
+  //   display: flex;
+  //   justify-content: flex-end;
+  // }
