--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <a routerLink="/" class="navbar-brand"><img src="assets/images/Smokoff_logo.png" alt="Smokoff" width="125px"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -9,12 +9,10 @@
       <li class="nav-item"><a class="nav-link" routerLink="#contact">Contact</a></li>
     </ul>
     <ul class="navbar-nav">
-      <li class="nav-item mr-auto"><a class="nav-link" routerLink="auth/login">Login</a></li>
-      <!-- <div class="logged-in ">
-          <li class="nav-item mr-auto"><a class="btn btn-danger d-block" routerLink="profile">a</a></li>
-          <li class="nav-item"><a class="btn btn-secondary d-block" routerLink="auth/logout">Logout</a></li>
-      </div> -->
-      <li class="nav-item"><a class="btn btn-danger d-block" routerLink="auth/register">Register</a></li>
+      <li *ngIf="user==NULL" class="nav-item mr-auto"><a class="nav-link" routerLink="auth/login">Login</a></li>
+        <li *ngIf="user!=NULL" class="nav-item mr-auto"><a class="btn btn-secondary d-block mr-3" routerLink="profile"><i class="fas fa-user-circle"></i> {{user.first_name}}</a></li>
+        <li *ngIf="user!=NULL" (click)="logout()" class="nav-item"><a class="btn btn-danger d-block">Logout</a></li>
+      <li *ngIf="user==NULL" class="nav-item"><a class="btn btn-danger d-block" routerLink="auth/register">Register</a></li>
     </ul>
   </div>
 </nav>
