--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -16,7 +16,7 @@
             </div>
           <hr>
           <label id="icon" for="name"><i class="icon-envelope "></i></label>
-          <input type="text" name="name" id="name" placeholder="Email" required/>
+          <input type="email" name="name" id="name" placeholder="Email" required/>
           <label id="icon" for="name"><i class="icon-user"></i></label>
           <input type="text" name="name" id="name" placeholder="Name" required/>
           <label id="icon" for="name"><i class="icon-shield"></i></label>
