--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -115,7 +115,7 @@ hr{
   opacity: 0.3;
 }
 
-input[type=text],input[type=password]{
+input[type=text], input[type=email], input[type=password]{
   width: 200px; 
   height: 39px; 
   -webkit-border-radius: 0px 4px 4px 0px/5px 5px 4px 4px; 
