--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "assets/variables.scss";
 
-*{
+*:not(i){
     font-family: 'Roboto', sans-serif;
     // margin:0;
     // padding:0;
