tidy up UI, add items to navbar

--- a/src/app/components/planner/planner.component.html
+++ b/src/app/components/planner/planner.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <h2>Planner</h2>
+<div class="container h-100">
+  <h2 class="mt-3">Planner</h2>
   <a class="btn btn-secondary" routerLink="../"><i class="fas fa-angle-left"></i> Back</a>
   <!-- Button and pop-up -->
   <div class="mt-3">
