--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <h2>Profile</h2>
+<div class="container h-100">
+  <h2 class="mt-3">Profile</h2>
   <a class="btn btn-secondary" routerLink="../dashboard"><i class="fas fa-angle-left"></i> Back</a>
   <form class="">
     <div class="form-row mt-3">
