--- a/src/app/components/smoker-ui/smoker-ui.component.html
+++ b/src/app/components/smoker-ui/smoker-ui.component.html
@@ -1,40 +1,36 @@
 <ng-container *ngIf="user">
-	
-<div class="container">
+	<div class="container h-100">
 		<h2 class="mt-3">Welcome, {{ user.first_name }}!</h2>
-		<p>Have a nice day!</p>
-		
-		<div class="row">
-			<div class="col-lg mt-3">
+		<p>Have a nice day!</p>	
+		<div class="row mb-3">
+			<div class="col-lg">
 				<div class="card card-body h-100">
 					<h2 class="card-title">Stats</h2>
-					<p class="card-text">You haven't smoked for </p>
-					<p class="card-text">You have saved Rp. </p>
+					<p class="card-text">You have smoked only per day.</p>
+					<p class="card-text">You have spent Rp. per day</p>
 				</div>
 			</div>
-			<div class="col-lg mt-3">
+			<div class="col-lg">
 				<div class="card card-body h-100">
 					<h2 class="card-title">Today's Plan</h2>
-					<ul>
-						<li>Don't smoke</li>
-						<li>Don't buy cigs</li>
-					</ul>
-					<a class="btn btn-danger mt-auto" routerLink="planner">See Plans</a>
+					<h3>Plan_Name</h3>
+					<p>Plan_descriptions</p>
+					<a class="btn btn-danger mt-auto" routerLink="planner"><i class="fas fa-eye"></i> All Plans</a>
 				</div>
 			</div>
-			<div class="col-lg mt-3">
+			<div class="col-lg">
 				<div class="card card-body h-100">
 					<h2 class="card-title">Profile</h2>
 					<img class="mx-auto"src="../../assets/images/person_placeholder.jpg" width="100px"/>
 					<p class="mt-3 card-text">{{user.first_name}} {{user.last_name}}</p>
-					<p class="card-text">Level {{user.level}}</p>
+					<p class="card-text">Level <span class="font-weight-bold">{{user.level}}</span></p>
 					<div class="progress mb-3">
-						<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">{{user.exp}}</div>
+						<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style.width="{{user.exp}}%" attr.aria-valuenow="{{user.exp}}" aria-valuemin="0" aria-valuemax="100">{{user.exp}}</div>
 					</div> 
 					<div class="badges my-3"></div>
-					<a routerLink="../profile" class="btn btn-danger"><i class="fas fa-pen"></i> Edit Profile</a>
+					<a routerLink="../profile" class="btn btn-danger"><i class="fas fa-pen"></i> Profile</a>
 				</div>
 			</div>
 		</div>
-	</div>  
+	</div>
 </ng-container>
