revised most UI and functionalities

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,15 +5,21 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
+      <ng-container *ngIf="logged_in">
+        <li class="nav-item"><a class="nav-link" routerLink="dashboard">Dashboard</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="dashboard/planner">Planner</a></li>
+      </ng-container>
       <li class="nav-item"><a class="nav-link" routerLink="">Blog</a></li>
-      <li *ngIf="user!=NULL" class="nav-item"><a class="nav-link" routerLink="dashboard">Dashboard</a></li>
-      <li *ngIf="user!=NULL" class="nav-item"><a class="nav-link" routerLink="dashboard/planner">Planner</a></li>
     </ul>
     <ul class="navbar-nav">
-      <li *ngIf="user==NULL" class="nav-item mr-auto"><a class="nav-link" routerLink="auth/login">Login</a></li>
-        <li *ngIf="user!=NULL" class="nav-item mr-auto"><a class="btn btn-secondary d-block mr-3" routerLink="profile"><i class="fas fa-user-circle"></i> {{user.first_name}}</a></li>
-        <li *ngIf="user!=NULL" class="nav-item"><a (click)="logout()" class="btn btn-danger d-block">Logout</a></li>
-      <li *ngIf="user==NULL" class="nav-item"><a class="btn btn-danger d-block" routerLink="auth/register">Register</a></li>
+      <ng-container *ngIf="!logged_in">
+          <li class="nav-item mr-auto"><a class="nav-link" routerLink="auth/login">Login</a></li>
+          <li class="nav-item"><a class="btn btn-danger d-block" routerLink="auth/register">Register</a></li>
+      </ng-container>
+      <ng-container *ngIf="logged_in">
+          <li class="nav-item mr-auto"><a class="btn btn-secondary d-block mr-3" routerLink="profile"><i class="fas fa-user-circle"></i> {{user.first_name}}</a></li>
+          <li class="nav-item"><button (click)="logout()" class="btn btn-danger d-block">Logout</button></li>
+      </ng-container>
     </ul>
   </div>
 </nav>
