--- a/src/app/components/smoker-ui/smoker-ui.component.html
+++ b/src/app/components/smoker-ui/smoker-ui.component.html
@@ -13,7 +13,7 @@
 			<div class="col-lg">
 				<div class="card card-body h-100">
 					<h2 class="card-title">Today's Plan</h2>
-					<h3>Plan_Name</h3>
+					<h3>Plan a</h3>
 					<p>Plan_descriptions</p>
 					<a class="btn btn-danger mt-auto" routerLink="planner"><i class="fas fa-eye"></i> All Plans</a>
 				</div>
@@ -25,7 +25,7 @@
 					<p class="mt-3 card-text">{{user.first_name}} {{user.last_name}}</p>
 					<p class="card-text">Level <span class="font-weight-bold">{{user.level}}</span></p>
 					<div class="progress mb-3">
-						<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style.width="{{user.exp}}%" attr.aria-valuenow="{{user.exp}}" aria-valuemin="0" aria-valuemax="100">{{user.exp}}</div>
+						<div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style.width="{{user.exp}}%" attr.aria-valuenow="{{user.exp}}" aria-valuemin="0" aria-valuemax="100"></div>
 					</div> 
 					<div class="badges my-3"></div>
 					<a routerLink="../profile" class="btn btn-danger"><i class="fas fa-pen"></i> Profile</a>
