--- a/src/app/components/planner/planner.component.html
+++ b/src/app/components/planner/planner.component.html
@@ -1,13 +1,40 @@
 <div class="container h-100">
-  <h2 class="mt-3">Planner</h2>
-  <a class="btn btn-secondary" routerLink="../"><i class="fas fa-angle-left"></i> Back</a>
-  <!-- Button and pop-up -->
-  <div class="mt-3">
-    <button type="button" class="btn btn-danger btn-block" data-toggle="modal" data-target="#plannerInput"><i class="fas fa-pen"></i> Add Plan</button>
-    <app-planner-input></app-planner-input>
-  </div>
-  <!-- Month Calendar -->
-  <div class="plans my-3">
-    Plans
-  </div>
+	<h2 class="mt-3">Planner</h2>
+	<a class="btn btn-secondary" routerLink="../"><i class="fas fa-angle-left"></i> Back</a>
+
+	<!-- Button and pop-up -->
+	<div class="mt-3">
+		<button type="button" class="btn btn-danger btn-block" data-toggle="modal" data-target="#plannerInput"><i class="fas fa-pen"></i> Add Plan</button>
+		<app-planner-input></app-planner-input>
+	</div>
+
+	<!-- Month Calendar -->
+	<h3 class="my-3">Plans</h3>
+	<div class="plans">
+		<table class="table table-hover">
+            <thead class="thead-light">
+                <tr>
+                    <th scope="col">Date</th>
+                    <th scope="col">Plan Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <ng-container *ngIf="userplans">
+                    <tr *ngFor="let userplan of userplans">
+                        <th scope="row">{{userplan.date}}</th>
+                        <td>Plan {{plan[userplan.plan_id-1].type}}</td>
+                        <td>{{plan[userplan.plan_id-1].plan_description}}</td>
+                        <td><button role="button" class="btn"><i class="fas fa-times-circle"></i></button></td>
+                    </tr>
+                </ng-container>
+                <ng-container *ngIf="!userplans">
+                    <tr>
+                        <th scope="row" colspan="4" style="text-align:center">You have no plans! 😮</th>
+                    </tr>
+                </ng-container>
+            </tbody>
+		</table>
+	</div>
 </div>
