--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,38 +1,34 @@
 <div class="container h-100">
   <h2 class="mt-3">Profile</h2>
   <a class="btn btn-secondary" routerLink="../dashboard"><i class="fas fa-angle-left"></i> Back</a>
-  <form class="">
+  <form>
     <div class="form-row mt-3">
       <label for="emailaddress">Email Address</label>
-      <input type="email" class="form-control" id="emailaddress" placeholder="name@example.com">
+      <input type="email" class="form-control" id="emailaddress" placeholder="name@example.com" attr.value="{{user.email}}">
     </div>
     <div class="form-row mt-3">
       <label for="name">First Name</label>
-      <input type="text" class="form-control" id="name" placeholder="Name">
+      <input type="text" class="form-control" id="name" placeholder="First Name" attr.value="{{user.first_name}}">
     </div>
     <div class="form-row mt-3">
       <label for="name">Last Name</label>
-      <input type="text" class="form-control" id="name" placeholder="Name">
+      <input type="text" class="form-control" id="name" placeholder="Last Name" attr.value="{{user.last_name}}">
     </div>
     <div class="form-row mt-3">
-      <label for="age">Age</label>
-      <input type="number" class="form-control" id="age" placeholder="Age">
+      <label for="birthday">Birthday</label>
+      <input type="date" class="form-control" id="birthday" placeholder="Birthday" attr.value="{{user.birthday}}">
     </div>
     <div class="form-row mt-3">
       <label>Gender</label>
     </div>
     <div class="form-row">
       <div class="custom-control custom-radio custom-control-inline">
-        <input type="radio" class="custom-control-input" id="gender1" name="gender">
+        <input type="radio" class="custom-control-input" id="gender1" name="gender" [attr.checked]="user.gender=='Male' ? 'checked' : null">
         <label class="custom-control-label"for="gender1">Male</label>
       </div>
       <div class="custom-control custom-radio custom-control-inline">
-        <input type="radio" class="custom-control-input" id="gender2" name="gender">
+        <input type="radio" class="custom-control-input" id="gender2" name="gender" [attr.checked]="user.gender=='Female' ? 'checked' : null">
         <label class="custom-control-label"for="gender2">Female</label>
-      </div>
-      <div class="custom-control custom-radio custom-control-inline">
-        <input type="radio" class="custom-control-input" id="gender3" name="gender">
-        <label class="custom-control-label"for="gender3">Other</label>
       </div>
     </div>
     <button type="submit" class="btn btn-danger btn-block my-3">Save</button>
