--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -2,33 +2,27 @@
   <div class="regis_box">
       <form>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600' rel='stylesheet' type='text/css'>
-        <link href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css" rel="stylesheet">
-        
         <div class="testbox">
           <h2 class="login_statement">REGISTER</h2>
           <form action="/">
-              <hr>
-            <div class="accounttype">
-              <input type="radio" value="None" id="radioOne" name="account" checked/>
-              <label for="radioOne" class="radio" chec> Smoker </label>
-              <input type="radio" value="None" id="radioTwo" name="account" />
-              <label for="radioTwo" class="radio"> Non-Smoker </label>
-            </div>
-          <hr>
-          <label id="icon" for="name"><i class="icon-envelope "></i></label>
-          <input type="email" name="name" id="name" placeholder="Email" required/>
-          <label id="icon" for="name"><i class="icon-user"></i></label>
-          <input type="text" name="name" id="name" placeholder="Name" required/>
-          <label id="icon" for="name"><i class="icon-shield"></i></label>
-          <input type="password" name="name" id="name" placeholder="Password" required/>
+          <label id="icon" for="first_name"><i class="fas fa-user"></i></label>
+          <input type="text" name="first_name" id="first_name" placeholder="First Name" required/>
+          <label id="icon" for="last_name"><i class="fas fa-user"></i></label>
+          <input type="text" name="last_name" id="last_name" placeholder="Last Name" required/>
+          <label id="icon" for="birthday"><i class="fas fa-calendar-day"></i></label>
+          <input type="date" name="birthday" id="birthday" placeholder="Birthday" required/>
+          <label id="icon" for="email"><i class="fas fa-envelope"></i></label>
+          <input type="email" name="email" id="email" placeholder="Email" required/>
+          <label id="icon" for="password"><i class="fas fa-key"></i></label>
+          <input type="password" name="password" id="password" placeholder="Password" required/>
           <div class="gender">
-            <input type="radio" value="None" id="male" name="gender" checked/>
+            <input type="radio" value="None" id="male" name="gender" />
             <label for="male" class="radio" chec>Male</label>
             <input type="radio" value="None" id="female" name="gender" />
             <label for="female" class="radio">Female</label>
-            </div> 
-            <a routerLink="../login"> <p>Have an account? Login</p></a>
-            <a href="#" class="button">Register</a>
+          </div> 
+          <a routerLink="../login"> <p>Have an account? Login</p></a>
+          <a href="#" class="button">Register</a>
           </form>
         </div>
       </form>
