--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,38 @@
-<div class="bgimg">
-  <img class="mx-auto" src="../../../assets/images/50-reasons-to-stop-smoking-today-7x4 (1).jpg" alt="">
-</div>              
+<div class="jumbotron">
+  <h2 class="about">About Us</h2>
+  <p class="about-text">
+    We would like to help people with smoking problems get over it and in turn make the community a better place.
+  </p>
+  <div class="join-button"><a class="btn btn-primary btn-lg" href="auth/register" role="button">Join Us</a></div>
+</div>
 
+<div class="container m-t-md">
+  <!-- First row -->
+  <div class="row">
+    <div class="col-xs-12 col-md-4">
+      <!-- Card -->
+      <article class="card animated fadeInLeft">
+        <img class="card-img-top img-responsive" src="https://image.freepik.com/free-photo/close-up-pen-market-research_1098-3465.jpg" alt="Deer in nature" />
+        <div class="card-block">
+          <h4 class="card-title">Smoking Statistics</h4>
+          <h6 class="text-muted">Anonymous</h6>
+          <p class="card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
+              occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+          <a href="#" class="btn btn-primary">Read more</a>
+        </div>
+      </article><!-- .end Card -->
+    </div>
+    
+
+         
 <!-- About Section -->
-<div class="about" id="about">
+<!-- <div class="about" id="about">
   <div class="about-title">About Us</div>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
     occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
     laboris nisi ut aliquip ex ea commodo consequat.
   </p>
-</div>
+</div> -->
