--- a/src/app/components/planner-input/planner-input.component.html
+++ b/src/app/components/planner-input/planner-input.component.html
@@ -12,30 +12,34 @@
         <div class="form-group">
           <label for="taskTitle">Smoke Plan</label>
           <div class="custom-control custom-radio">
-            <input type="radio" formControlName="planRadio" class="custom-control-input" id="planTypeA" name="planTypeRadio" required>
+            <input type="radio" formControlName="planTypeRadio" class="custom-control-input" 
+            id="planTypeA" name="planTypeRadio" value="1" required>
             <label class="custom-control-label" for="planTypeA">Plan A</label>
           </div>
           <div class="custom-control custom-radio">
-            <input type="radio" formControlName="planRadio" class="custom-control-input" id="planTypeB" name="planTypeRadio" required>
+            <input type="radio" formControlName="planTypeRadio" class="custom-control-input" 
+            id="planTypeB" name="planTypeRadio" value="2" required>
             <label class="custom-control-label" for="planTypeB">Plan B</label>
           </div>
           <div class="custom-control custom-radio">
-            <input type="radio" formControlName="planRadio" class="custom-control-input" id="planTypeC" name="planTypeRadio" required>
+            <input type="radio" formControlName="planTypeRadio" class="custom-control-input" 
+            id="planTypeC" name="planTypeRadio" value="3" required>
             <label class="custom-control-label" for="planTypeC">Plan C</label>
           </div>
         </div>
         <div class="form-group">
           <label for="planDesc">Description</label>
-          <textarea id="planDesc" formControlName="planDesc" class="form-control" placeholder="Write more about what you want to accomplish." disabled></textarea>
+          <textarea id="planDesc" class="form-control" disabled>{{plan[f.planTypeRadio.value-1].plan_description}}</textarea>
         </div>
         <div class="form-group">
           <label for="planDate">Date</label>
           <input type="date" formControlName="planDate" class="form-control" required>
         </div>
         <div class="custom-control custom-switch">
-          <label class="custom-control-label" for="notificationSwitch">E-mail Notifications</label>
           <input type="checkbox" formControlName="planNotification" class="custom-control-input" id="notificationSwitch">
+          <label class="custom-control-label" for="notificationSwitch">E-mail Notifications</label>
         </div>
+        <div *ngIf="success" class="alert alert-success mt-3">Plan has been added!</div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal"><i class="fas fa-times"></i> Close</button>
