--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,13 @@
-<div class="jumbotron">
-  <h2 class="about">About Us</h2>
-  <p class="about-text">
-    We would like to help people with smoking problems get over it and in turn make the community a better place.
-  </p>
-  <div class="join-button"><a class="btn btn-primary btn-lg" href="auth/register" role="button">Join Us</a></div>
-</div>
 
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+      <h2 class="display-1 mt-3">STOP!</h2>
+      <p class="lead py-3">
+        Let's stop smoking and help us to make a world a better place.
+      </p>
+      <div class="join-button"><a class="btn btn-danger btn-lg" href="auth/register" role="button">Join Us</a></div>
+  </div>
+</div>
 <div class="container m-t-md">
   <!-- First row -->
   <div class="row">
@@ -25,6 +27,9 @@
         </div>
       </article><!-- .end Card -->
     </div>
+  </div>
+</div>
+
     
 
          
