--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,16 +1,19 @@
+@import "src/styles.scss";
 .bgimg {
     background-position: center;
     background-size: cover;
     display: flex;
 }
 
-.about-text{
-    color: white;
+.lead{
+    color: whitesmoke;
     font-weight: bold;
+    text-shadow: 1px 1px 2px #333; 
 }
 
-.about{
+.display-1{
     color: whitesmoke;
+    text-shadow: 1px 1px 2px #333; 
 }
 
 .jumbo-title{
@@ -22,6 +25,10 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    height: 85vh;
+}
+.container{
+    padding-top: 15vh;
 }
 
 
