add delete userplan

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,13 +9,12 @@
   </div>
 </div>
 <div class="container m-t-md">
-  <!-- First row -->
   <div class="row">
-    <div class="col-xs-12 col-md-4">
-      <!-- Card -->
-      <article class="card animated fadeInLeft">
-        <img class="card-img-top img-responsive" src="https://image.freepik.com/free-photo/close-up-pen-market-research_1098-3465.jpg" alt="Deer in nature" />
-        <div class="card-block">
+    <!-- Card -->
+  <div class="col-md-4">
+      <div class="card mb-3">
+        <img class="card-img-top img-responsive mt-3" src="https://image.freepik.com/free-photo/close-up-pen-market-research_1098-3465.jpg" alt="Deer in nature" />
+        <div class="card-body">
           <h4 class="card-title">Smoking Statistics</h4>
           <h6 class="text-muted">Anonymous</h6>
           <p class="card-text">
@@ -23,10 +22,45 @@
               occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
               laboris nisi ut aliquip ex ea commodo consequat.
           </p>
-          <a href="#" class="btn btn-primary">Read more</a>
+          <a href="#" class="btn btn-danger mb-3">Read more</a>
         </div>
-      </article><!-- .end Card -->
+      </div>
     </div>
+    <!-- .end Card -->
+    <!-- Card -->
+  <div class="col-md-4">
+      <div class="card mb-3">
+        <img class="card-img-top img-responsive mt-3" src="https://image.freepik.com/free-photo/close-up-pen-market-research_1098-3465.jpg" alt="Deer in nature" />
+        <div class="card-body">
+          <h4 class="card-title">Smoking Articles</h4>
+          <h6 class="text-muted">Anonymous</h6>
+          <p class="card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
+              occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+          <a href="#" class="btn btn-danger mb-3">Read more</a>
+        </div>
+      </div>
+    </div>
+    <!-- .end Card -->
+    <!-- Card -->
+  <div class="col-md-4">
+      <div class="card mb-3">
+        <img class="card-img-top img-responsive mt-3" src="https://image.freepik.com/free-photo/close-up-pen-market-research_1098-3465.jpg" alt="Deer in nature" />
+        <div class="card-body">
+          <h4 class="card-title">Smoking Help</h4>
+          <h6 class="text-muted">Anonymous</h6>
+          <p class="card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint
+              occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              laboris nisi ut aliquip ex ea commodo consequat.
+          </p>
+          <a href="#" class="btn btn-danger mb-3">Read more</a>
+        </div>
+      </div>
+    </div>
+    <!-- .end Card -->
   </div>
 </div>
 
