--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -25,10 +25,8 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 85vh;
-}
-.container{
-    padding-top: 15vh;
+    min-height: 85vh;
+    padding-top: 20vh;
 }
 
 
