--- a/src/app/components/planner/planner.component.html
+++ b/src/app/components/planner/planner.component.html
@@ -9,7 +9,8 @@
 	</div>
 
 	<!-- Month Calendar -->
-	<h3 class="my-3">Plans</h3>
+    <h3 class="my-3">Plans</h3>
+    <div *ngIf="success" class="alert alert-success mt-3">Plan has been deleted!</div>
 	<div class="plans">
 		<table class="table table-hover">
             <thead class="thead-light">
@@ -34,7 +35,7 @@
                             <label class="custom-control-label" for="notificationSwitch"></label>
                             </div>                        
                         </td>
-                        <td><button role="button" class="btn"><i class="fas fa-times-circle"></i></button></td>
+                        <td><button role="button" (click)="deleteUserPlan(userplan.id)" class="btn"><i class="fas fa-times-circle"></i></button></td>
                     </tr>
                 </ng-container>
                 <ng-container *ngIf="!userplans">
